# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
gendiff/: gendiff.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py
tests/fixtures/: expected_diff
